crates/simpl-syntax/src/snapshots/simpl_syntax__test__function_application-2.snap
---
source: crates/simpl-syntax/src/test.rs
expression: ast
---
App {
    func: Var {
        name: "f",
    },
    args: [
        Lit {
            val: Int(
                1,
            ),
        },
        Lit {
            val: Int(
                2,
            ),
        },
    ],
}
