crates/simpl-syntax/src/snapshots/simpl_syntax__test__function_application-3.snap
---
source: crates/simpl-syntax/src/test.rs
expression: ast
---
Let {
    bindings: [
        (
            "id",
            Lambda {
                params: [
                    "x",
                ],
                body: Var {
                    name: "x",
                },
            },
        ),
    ],
    body: App {
        func: Var {
            name: "id",
        },
        args: [
            Var {
                name: "id",
            },
        ],
    },
}
