crates/simpl-syntax/src/snapshots/simpl_syntax__test__function_application.snap
---
source: crates/simpl-syntax/src/test.rs
expression: parse(src).unwrap()
---
App {
    func: Var {
        name: "f",
    },
    arg: Lit {
        val: Int(
            1,
        ),
    },
}
