crates/simpl-syntax/src/snapshots/simpl_syntax__test__if_then_else.snap
---
source: crates/simpl-syntax/src/test.rs
expression: parse(src).unwrap()
---
If {
    test: Lit {
        val: Bool(
            true,
        ),
    },
    then_branch: Lit {
        val: Int(
            1,
        ),
    },
    else_branch: Lit {
        val: Int(
            0,
        ),
    },
}
