crates/simpl-syntax/src/snapshots/simpl_syntax__test__lambda_abstraction-2.snap
---
source: crates/simpl-syntax/src/test.rs
expression: parse(src).unwrap()
---
Lambda {
    params: [
        "x",
        "y",
    ],
    body: Var {
        name: "y",
    },
}
