crates/simpl-syntax/src/snapshots/simpl_syntax__test__lambda_abstraction-3.snap
---
source: crates/simpl-syntax/src/test.rs
expression: ast
---
Lambda {
    params: [
        "x",
        "y",
    ],
    body: Var {
        name: "y",
    },
}
