crates/simpl-syntax/src/snapshots/simpl_syntax__test__lambda_abstraction.snap
---
source: crates/simpl-syntax/src/test.rs
expression: parse(src).unwrap()
---
Lambda {
    params: [
        "x",
    ],
    body: Var {
        name: "x",
    },
}
