crates/simpl-syntax/src/snapshots/simpl_syntax__test__let_binding-2.snap
---
source: crates/simpl-syntax/src/test.rs
expression: ast
---
Let {
    bindings: [
        (
            "x",
            Lit {
                val: Int(
                    5,
                ),
            },
        ),
        (
            "y",
            Lit {
                val: Bool(
                    false,
                ),
            },
        ),
    ],
    body: Var {
        name: "x",
    },
}
