crates/simpl-syntax/src/snapshots/simpl_syntax__test__let_binding.snap
---
source: crates/simpl-syntax/src/test.rs
expression: parse(src).unwrap()
---
Let {
    bindings: [
        (
            "x",
            Lit {
                val: Int(
                    5,
                ),
            },
        ),
    ],
    body: Var {
        name: "x",
    },
}
