crates/simpl-syntax/src/snapshots/simpl_syntax__test__letrec_binding-2.snap
---
source: crates/simpl-syntax/src/test.rs
expression: parse(src).unwrap()
---
Letrec {
    bindings: [
        (
            "f",
            Lambda {
                params: [
                    "x",
                ],
                body: App {
                    func: Var {
                        name: "f",
                    },
                    arg: Var {
                        name: "x",
                    },
                },
            },
        ),
        (
            "g",
            Lambda {
                params: [
                    "y",
                ],
                body: Var {
                    name: "y",
                },
            },
        ),
    ],
    body: Var {
        name: "f",
    },
}
